@@ -69,6 +69,8 @@ case "${target}" in
 	;;
   mn10?00-*-*)
 	;;
+  or32-*-*)
+	;;
   powerpcle-*-pe)
 	;;
   sh*-*-*)
@@ -195,13 +197,13 @@ AC_SUBST(host_makefile_frag_path)
 AC_SUBST_FILE(host_makefile_frag)
 
 AC_CONFIG_FILES(Makefile,
-ac_file=Makefile . ${libgloss_topdir}/config-ml.in,
-srcdir=${srcdir}
-target=${target}
-with_multisubdir=${with_multisubdir}
-ac_configure_args="${ac_configure_args} --enable-multilib"
-CONFIG_SHELL=${CONFIG_SHELL-/bin/sh}
-libgloss_topdir=${libgloss_topdir}
+		ac_file=Makefile . ${libgloss_topdir}/config-ml.in,
+		srcdir=${srcdir}
+		target=${target}
+		with_multisubdir=${with_multisubdir}
+		ac_configure_args="${ac_configure_args} --enable-multilib"
+		CONFIG_SHELL=${CONFIG_SHELL-/bin/sh}
+		libgloss_topdir=${libgloss_topdir}
 )
 AC_OUTPUT
 
