@@ -1,5 +1,6 @@
 # configure.in. Autoconf input file.
 
+# Copyright (c) 1995, 1996 Cygnus Support
 # Copyright (C) 2004, Jacob Bower
 # Copyright (C) 2010, Embecosm Limited <info@embecosm.com>
  
@@ -47,9 +48,9 @@ else
 fi
 AC_CONFIG_AUX_DIR($libgloss_topdir)
 
-AC_CANONICAL_SYSTEM
-AC_ARG_PROGRAM
+AC_CANONICAL_TARGET
 
+AC_ARG_PROGRAM
 AC_PROG_INSTALL
 
 AC_DEFINE(HAVE_GNU_LD, 1, [Using GNU ld])
@@ -109,5 +110,6 @@ AC_CONFIG_FILES(Makefile,
 		with_multisubdir=${with_multisubdir}
 		ac_configure_args="${ac_configure_args} --enable-multilib"
 		CONFIG_SHELL=${CONFIG_SHELL-/bin/sh}
-		libgloss_topdir=${libgloss_topdir})
+		libgloss_topdir=${libgloss_topdir}
+)
 AC_OUTPUT
